2005-10-08  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: reviewed and updated documentation.
	Added development, and bugreporting section, which should be 
	filled up later, if possible.

	* debian/README.Debian: update README

	* pbuilder.8: refer to --debug option from --preserve-buildplace.

2005-10-06  Junichi Uekawa  <dancer@debian.org>

	* testsuite/run-test.sh (testbuild): add debootstrapopts, --verbose.

2005-10-04  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-buildpackage-funcs: Add comment on what cowprotect is there for.

2005-09-30  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: #325318, from Osamu Aoki;
	clarify about precedence in configuration options.

	* pbuilder-modules:
	* pbuilder-updatebuildenv:  apply patch to place -maxdepth before other args.

2005-09-04  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: Add notes on cowdancer.
	updates notes to note that it's hosted at alioth now.

	* Documentation/Makefile (preview): create target for preview with
	mozilla firefox.

2005-08-29  Junichi Uekawa  <dancer@debian.org>

	* pdebuild.1: update semantics; left-to-right
	* pbuilder.8: update semantics; left-to-right

2005-08-28  Junichi Uekawa  <dancer@debian.org>

	* pbuilderrc: SHELL variable is set a default value.

2005-08-19  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-buildpackage-funcs: do cow thing, with cowprotect, for cowdancer.	

2005-08-17  Junichi Uekawa  <dancer@debian.org>

	* debian/TODO: update the TODO list.

	* pbuilder-buildpackage-funcs: pass ${CHROOTEXEC} value directly to pbuilder-satisfydepends.

	* pbuilder-satisfydepends (CONTINUE_FAIL): add --internal-chrootexec

2005-08-15  Junichi Uekawa  <dancer@debian.org>

	* pbuilder: $CHROOTEXEC instead of direct invocation of 'chroot' 
	  command.
	  satisfydepends needs the CHROOTEXEC support.

	  I want to support setting CHROOTEXEC so that I can hook