@@ -1,6 +1,7 @@
 pbuilder (0.136) UNRELEASED; urgency=low
 
-  * 
+  [Junichi Uekawa]
+  * pbuilder-doc.xml: Update documentation on development policy
 
  -- Junichi Uekawa <dancer@debian.org>  Sun,  9 Oct 2005 14:57:07 +0900
 
