@@ -1,3 +1,8 @@
+2005-10-09  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml: update documentation on development
+	policy.
+
 2005-10-08  Junichi Uekawa  <dancer@debian.org>
 
 	* Documentation/pbuilder-doc.xml: reviewed and updated documentation.
